# ganadero

./: .eslintrc.json  .gitignore  IMPLEMENTATION_STATUS.md  README-WINDOWS.md  SETUP_GUIDE.md  WINDOWS-BUILD-GUIDE.md  bun.lockb  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: release.yml  tauri-windows.yml
prisma/: dev.db  schema.prisma  seed.js  seed.ts
prisma/migrations/20250807170838_init/: migration.sql
prisma/migrations/20250807231251_init/: migration.sql
prisma/migrations/20250810162416_add_organizations_roles/: migration.sql
prisma/migrations/20250810165106_add_device_binding/: migration.sql
public/: manifest.json  sw.js
scripts/: assert-standalone.mjs  build-windows.sh  generate-app-icons.mjs  generate-placeholder-icon.mjs  prepare-node-sidecar.mjs  regenerate-mac-icns.mjs  regenerate-tauri-icons.mjs  regenerate-tauri-pngs.mjs  standalone-postbuild.mjs  tauri-build.sh  tauri-postbuild.mjs  tauri-prebuild.mjs
scripts/windows/: build_installer.cmd
src/: _middleware_bak.ts  hero.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/__tests__/: integration.test.tsx
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  page.tsx
src/app/(app)/: layout.tsx
src/components/: ai-bubble.tsx  qr-scanner.tsx
src/lib/: dexie.ts  utils.ts
src/modules/: ai-specs.ts  index.ts
src/providers/: auth-gate.tsx  heroui-provider.tsx  onboarding-gate.tsx
src/server/: trpc.ts
(+215 files in other folders)
