[package]
name = "ganado-ai-app"
version = "0.1.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["custom-protocol"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
flate2 = { version = "1", features = ["rust_backend"] }
once_cell = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3 
